--- a/BookingApi/packages.config
+++ b/BookingApi/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Reactive" version="2.0.121121" targetFramework="net452" />
+  <package id="FSharp.Control.Reactive" version="3.4.1" targetFramework="net452" />
+  <package id="FSharp.Reactive" version="2.1.131002" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="Rx-Core" version="2.0.21114" targetFramework="net452" />
-  <package id="Rx-Interfaces" version="2.0.21114" targetFramework="net452" />
-  <package id="Rx-Linq" version="2.0.21114" targetFramework="net452" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
 </packages>
